changed deprecated API usages